--- a/app/src/main/res/layout/book_page.xml
+++ b/app/src/main/res/layout/book_page.xml
@@ -14,7 +14,7 @@
         android:background="#A0000000" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnBack"
         android:layout_width="91dp"
         android:layout_height="47dp"
         android:layout_marginTop="36dp"
@@ -38,7 +38,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.13"
-        app:layout_constraintStart_toEndOf="@+id/button"
+        app:layout_constraintStart_toEndOf="@+id/btnBack"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -178,7 +178,7 @@
         app:layout_constraintBottom_toTopOf="@+id/linearLayoutBottomNav"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playerContainer" />"")/>>
+        app:layout_constraintTop_toBottomOf="@+id/playerContainer" />
 
 
     <LinearLayout
