Были добавлены новые зависимости и отображение этих зависимостей. При выборе пользователем определенной главы будет автоматически рассчитываться длительность главы и отображение этой длительности, как на самой карточке главы, так и на плеере. При нажатии на стоп, плеер фиксирует время остановки, и если пользователь вновь включит плау, то аудиозапись включится. При нажатии на кнопки прокрутки, аудиозапись либо на 10 секунд ранее переводится, либо на 15 секунд идет вперед. так же идет зависимость времени и отображения бара (кружочка и линии прослушивания). Если пользователь будет на плеере нажимать стоп, то иконка поменяется не только в самом плеере, но и на карточке главы.
Кнопка "Назад" работает исправно и возвращает пользователя на страницу со всеми книгами, которые может выбирать и слушать пользователь.

--- a/app/src/main/res/layout/item_chapter.xml
+++ b/app/src/main/res/layout/item_chapter.xml
@@ -40,7 +40,7 @@
             android:id="@+id/textViewChapterDuration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="32 мин"
+            android:text="00:00"
             android:textColor="@android:color/darker_gray"
             android:textSize="14sp" />
     </LinearLayout>
