--- a/app/src/main/res/layout/book_page.xml
+++ b/app/src/main/res/layout/book_page.xml
@@ -116,7 +116,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:text="00:07:37"
+                android:text="00:00:00"
                 android:textSize="12sp" />
 
             <TextView
@@ -124,7 +124,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:text="00:28:57"
+                android:text="00:00:00"
                 android:textSize="12sp" />
 
             <SeekBar
@@ -211,6 +211,7 @@
             android:id="@+id/btnWhether"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="25dp"
             app:srcCompat="@drawable/off" />
 
         <!-- Не забудьте закрыть последний ImageView -->
@@ -218,7 +219,6 @@
             android:id="@+id/btnProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
             app:srcCompat="@drawable/iconprofile" />
 
     </LinearLayout>
