Я убрала лишнюю вкладку, сделала так, чтобы все аудиокниги фильтровались отдельно по жанрам и отдельно по новизне/адфавиту. Чтобы реализовать инбранное, необходимо понять как дальше мне стоит сделать вход в систему и еще нужно поменять инструкцию для данного приложения, так как приложение частично изменило свою концепцию и некоторых вкладок больше нет, то стоит ее передалть. На данный момент мне осталось дописать отчет, поменять инструкцию и дополнить бд для ранообразия и проект будет готов к эксплуатации без авторизации и персонального избранного пользователя, так как его можно реализовать исключительно через уникальный id, с привязкой к избранному.

--- a/app/src/main/res/layout/books.xml
+++ b/app/src/main/res/layout/books.xml
@@ -42,22 +42,24 @@
                 android:orientation="horizontal"
                 android:paddingTop="10dp"
                 android:paddingEnd="10dp">
+
                 <ImageView
                     android:id="@+id/btnJaner"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_marginEnd="8dp"
+                    android:layout_weight="1"
                     app:srcCompat="@drawable/btnall" />
+
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/btnClassic"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_marginEnd="8dp"
+                    android:layout_weight="1"
                     app:srcCompat="@drawable/btnclassicblack" />
                 <ImageView
-                    android:id="@+id/imageView6"
+                    android:id="@+id/btnKids"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -65,7 +67,7 @@
                     android:padding="9dp"
                     app:srcCompat="@drawable/btnkidsblack" />
                 <ImageView
-                    android:id="@+id/imageView7"
+                    android:id="@+id/btnDetective"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -89,14 +91,15 @@
                 android:paddingTop="10dp"
                 android:paddingEnd="10dp"
                 android:paddingStart="10dp">
+
                 <ImageView
-                    android:id="@+id/imageView9"
+                    android:id="@+id/btnFilterNew"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     app:srcCompat="@drawable/filtertonew" />
                 <ImageView
-                    android:id="@+id/imageView10"
+                    android:id="@+id/btnFilterAlphabet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/filtertoalfavitoff" />
@@ -133,13 +136,6 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="25dp"
             app:srcCompat="@drawable/iconbooks" />
-
-        <ImageView
-            android:id="@+id/btnMusic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="25dp"
-            app:srcCompat="@drawable/iconmusic" />
 
         <ImageView
             android:id="@+id/btnWhether"
