--- a/app/src/main/res/layout/instraction3.xml
+++ b/app/src/main/res/layout/instraction3.xml
@@ -49,12 +49,7 @@
             android:layout_marginEnd="25dp"
             app:srcCompat="@drawable/iconbooks2" /> <!-- Отступ справа -->
 
-        <ImageView
-            android:id="@+id/btnMusic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="25dp"
-            app:srcCompat="@drawable/iconmusic2" /> <!-- Отступ справа -->
+        <!-- Отступ справа -->
 
         <ImageView
             android:id="@+id/btnWhether"
