Были произведены небольшие изменения по воспроизведению, чтобы меньше было ошибок, которые были обнаружены при повторных попытках воспроизведения глав.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="blue">#E618366F</color>
     <color name="blueEntry">#6693C1</color>
     <color name="whiteBlue">#A1ECFF</color>
+    <color name="light_yellow">#C5BE80</color>
 </resources>
